GNOME Bugzilla – Bug 727512
srtpdec: assertion when checking rtcp ssrc
Last modified: 2014-04-12 03:15:34 UTC
Assertion when checking RTCP package ssrc. ** (xxxxxxx:14838): CRITICAL **: gst_rtcp_packet_move_to_next: assertion 'packet->type != GST_RTCP_TYPE_INVALID' failed Here's the backtrace. rtcp_buffer_get_ssrc is also called with RTP packets (which I still don't understand), so I guess it's easy to end up with an exception. (gdb) bt
+ Trace 233426
Created attachment 273492 [details] [review] check for GST_RTCP_TYPE_INVALID from the commit log: rtcp_buffer_get_ssrc is called even with RTP buffers. this means we might end up with an exception and not find any valid RTCP packet type and thus hit GST_RTCP_TYPE_INVALID. we now take care of this.
commit 01c15547d4aa632eb86873527343be0b5a349900 Author: Aleix Conchillo Flaqué <aleix@oblong.com> Date: Wed Apr 2 12:59:58 2014 -0700 srtpdec: fix assertion checking ssrc from rtcp packets rtcp_buffer_get_ssrc is called even with RTP buffers. this means we might end up with an exception and not find any valid RTCP packet type and thus hit GST_RTCP_TYPE_INVALID. we now take care of this. https://bugzilla.gnome.org/show_bug.cgi?id=727512